--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.0.5",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
