--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "framer-motion": "^12.9.2",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.0.5",
     "jspdf": "^3.0.1",
@@ -37,6 +38,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^5.2.10"
-
   }
 }
